--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd-mobile": "^2.3.4",
+    "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
