--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "events": "^3.3.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
