--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "rankhome",
-  "version": "0.1.0",
+  "version": "0.5.0",
+  "author": {
+    "name": "jiezai"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
