--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "react-virtualized": "^9.22.3",
     "web-vitals": "^1.0.1"
   },
